Commentaires sur spot ajoutés erreur 404 ajouté JQuery ok Json ok xss commmentaires ok

--- a/pom.xml
+++ b/pom.xml
@@ -146,5 +146,17 @@
             <scope>compile</scope>
         </dependency>
 
+        <!--  ============================================================== -->
+        <!--  === Commons Lang ============ -->
+        <!--  ============================================================== -->
+
+        <!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
+
+
     </dependencies>
 </project>
